RELEASE HISTORY OF THE "MALDIquantForeign" PACKAGE
==================================================

CHANGES in MALDIquantForeign VERSION 0.12 [2019-01-30]:
---------------------------------------------------------

* Fix reading of mzML with "non-standard data" arrays.
  Bug reported by Paul Turner.

CHANGES in MALDIquantForeign VERSION 0.11.6 [2018-08-30]:
---------------------------------------------------------

* Ignore comments in `.autoSep` and `.autoHeader`. Affected functions: .tab and
  .csv import, `import`, `importCsv`, `importTab`, `importTxt`.
  Bug reported by Fernando Pineda.

CHANGES in MALDIquantForeign VERSION 0.11.5 [2018-08-14]:
---------------------------------------------------------

* Fix psidev URLs.

CHANGES in MALDIquantForeign VERSION 0.11.4 [2018-08-01]:
---------------------------------------------------------

BUGFIX

* Don't access `totalIonCurrent` for `MassPeaks` objects in `exportMzMl` and
  `exportImzMl`.

CHANGES in MALDIquantForeign VERSION 0.11.3 [2018-05-27]:
---------------------------------------------------------

BUGFIX

* Don't use scientific format for numeric values in (i)mzML export.
  Patch by F. Orlando Galashan (see #25).


CHANGES in MALDIquantForeign VERSION 0.11.2 [2018-03-18]:
---------------------------------------------------------

BUGFIX

* Fix missing unitName in intensity array in mzMl export.
  Reported by Jan Kobarg patch proposed by F. Orlando Galashan (see #22/#24).


CHANGES IN MALDIquantForeign VERSION 0.11.1 [2017-12-04]:
---------------------------------------------------------

BUGFIX

* Fix handling of "processed" argument in `.writeImzMlDocument`; see #21.
* Fix `export` method if there was no filename given.


CHANGES IN MALDIquantForeign VERSION 0.11 [2017-09-01]:
-------------------------------------------------------

BUGFIX

* Fix integer overflow in `.ibdOffsets`; see issue #20.
* Fix `exportImzMl` for missing coordinates, pixelSize and dimension; closes
* #20.

INTERNAL CHANGES
