@@ -1,6 +1,6 @@
 Package: MALDIquantForeign
-Version: 0.12
-Date: 2019-01-30
+Version: 0.12.1
+Date: 2020-03-09
 Title: Import/Export Routines for 'MALDIquant'
 Authors@R: c(person("Sebastian", "Gibb", role=c("aut", "cre"),
         email="mail@sebastiangibb.de",
